Explicação sobre templates e static

--- a/2025.2/web2/aula_25_10_22/app/templates/index.html
+++ b/2025.2/web2/aula_25_10_22/app/templates/index.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Bem vindo(a) ao Flask, {{ nome }}</h1>
+    <h1>Bem vindo(a) ao Flask, {{ var }}</h1>
     <p>Essa página usa templates e arquivos estáticos.</p>
 </body>
 </html>
