Pequenas modificações Jinja2

--- a/2025.2/web2/aula_25_10_23/app/templates/frutas.html
+++ b/2025.2/web2/aula_25_10_23/app/templates/frutas.html
@@ -10,7 +10,7 @@
     <h1>Lista de frutas</h1>
     <ul>
         {% for item in lista %}
-            {% if item == "limão" %}
+            {% if item == "uva" %}
                 <li class="uva">{{ item }}</li>
             {% else %}
                 <li class="nuva">{{ item }}</li>
